5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1668_2972.log
== TEST (2019-04-15 19:38:59) 
-- CODE:
s=int(input("posicao final:"))
s0=int(input("posicao inicial:"))
v=float(input("velocidade do objeto:" ))
t=float(input("tempo de deslocamento:"))
s=s0+vt
if(s0>1000):
	print(s)
else:
	print(n)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:39:34) 
-- CODE:
s=int(input("posicao final:"))
s0=int(input("posicao inicial:"))
v=float(input("velocidade do objeto:" ))
t=float(input("tempo de deslocamento:"))
s=s0+vt
if(s0>1000):
	print("s")
else:
	print("n")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:40:25) 
-- CODE:
s=int(input("posicao final:"))
s0=int(input("posicao inicial:"))
v=float(input("velocidade do objeto:" ))
t=float(input("tempo de deslocamento:"))
s=v+t
if(s0>1000):
	print("s")
else:
	print("n")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:40:37) 
-- CODE:
s=int(input("posicao final:"))
s0=int(input("posicao inicial:"))
v=float(input("velocidade do objeto:" ))
t=float(input("tempo de deslocamento:"))
s=v+t
if(s0>1000):
	print("s")
else:
	print("n")
	
-- EXECUTION TIME:
0.154834
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2972/main.py", line 4, in <module>
    t=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:41:03) 
-- CODE:
s=int(input("posicao final:"))
s0=int(input("posicao inicial:"))
v=float(input("velocidade do objeto:" ))
t=float(input("tempo de deslocamento:"))
s=v+t
if(s0>1000):
	print("sim")
else:
	print("nao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:41:15) 
-- CODE:
s=int(input("posicao final:"))
s0=int(input("posicao inicial:"))
v=float(input("velocidade do objeto:" ))
t=float(input("tempo de deslocamento:"))
s=v+t
if(s0>1000):
	print("sim")
else:
	print("nao")
	
-- EXECUTION TIME:
0.161621
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2972/main.py", line 4, in <module>
    t=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:42:15) 
-- CODE:
s=int(input("posicao final:"))
s0=int(input("posicao inicial:"))
v=float(input("velocidade do objeto:" ))
t=float(input("tempo de deslocamento:"))
s=s0+v*t
if(s0>1000):
	print("sim")
else:
	print("nao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:42:25) 
-- CODE:
s=int(input("posicao final:"))
s0=int(input("posicao inicial:"))
v=float(input("velocidade do objeto:" ))
t=float(input("tempo de deslocamento:"))
s=s0+v*t
if(s0>1000):
	print("sim")
else:
	print("nao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:42:37) 
-- CODE:
s=int(input("posicao final:"))
s0=int(input("posicao inicial:"))
v=float(input("velocidade do objeto:" ))
t=float(input("tempo de deslocamento:"))
s=s0+v*t
if(s0>1000):
	print("sim")
else:
	print("nao")
	
-- EXECUTION TIME:
0.144834
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2972/main.py", line 4, in <module>
    t=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:42:54) 
-- CODE:
s=int(input("posicao final:"))
s0=int(input("posicao inicial:"))
v=float(input("velocidade do objeto:" ))
t=float(input("tempo de deslocamento:"))
s=s0+(v*t)
if(s0>1000):
	print("sim")
else:
	print("nao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:43:10) 
-- CODE:
s=int(input("posicao final:"))
s0=int(input("posicao inicial:"))
v=float(input("velocidade do objeto:" ))
t=float(input("tempo de deslocamento:"))
s=s0+(v*t)
if(s0>1000):
	print("sim")
else:
	print("nao")
	
-- EXECUTION TIME:
0.171267
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2972/main.py", line 4, in <module>
    t=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:43:23) 
-- CODE:
s=int(input("posicao final:"))
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+(v*t)
if(s0>1000):
	print("sim")
else:
	print("nao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:43:34) 
-- CODE:
s=int(input("posicao final:"))
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+(v*t)
if(s0>1000):
	print("sim")
else:
	print("nao")
	
-- EXECUTION TIME:
0.167533
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2972/main.py", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:45:02) 
-- CODE:
s=int(input("posicao final:"))
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+(v*t)
if(s0>=1000):
	print("sim")
else:
	print("nao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:45:10) 
-- CODE:
s=int(input("posicao final:"))
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+(v*t)
if(s0>=1000):
	print("sim")
else:
	print("nao")
	
-- EXECUTION TIME:
0.153993
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2972/main.py", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:45:25) 
-- CODE:
s=int(input("posicao final:"))
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+(v*t)
if(s0<=1000):
	print("sim")
else:
	print("nao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:45:40) 
-- CODE:
s=int(input("posicao final:"))
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+(v*t)
if(s0<=1000):
	print("sim")
else:
	print("nao")
	
-- EXECUTION TIME:
0.166627
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2972/main.py", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:45:48) 
-- CODE:
s=int(input("posicao final:"))
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+(v*t)
if(s0=<1000):
	print("sim")
else:
	print("nao")
	
-- ERROR:
File "XXXX", line 6
    if(s0=<1000):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:46:27) 
-- CODE:
s=int(input("posicao final:"))
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+(v*t)
if(s0>=1000):
	print("sim")
else:
	print("nao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:46:47) 
-- CODE:
s=int(input("posicao final:"))
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+(v*t)
if(s0>=1000):
	print("sim")
else:
	print("nao")
	
-- EXECUTION TIME:
0.205163
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2972/main.py", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:47:14) 
-- CODE:
s=int(input("posicao final:"))
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+(v*t)
if(s0<==1000):
	print("sim")
else:
	print("nao")
	
-- ERROR:
File "XXXX", line 6
    if(s0<==1000):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:47:21) 
-- CODE:
s=int(input("posicao final:"))
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+(v*t)
if(s0>==1000):
	print("sim")
else:
	print("nao")
	
-- ERROR:
File "XXXX", line 6
    if(s0>==1000):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:47:29) 
-- CODE:
s=int(input("posicao final:"))
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+(v*t)
if(s0<=1000):
	print("sim")
else:
	print("nao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:47:41) 
-- CODE:
s=int(input("posicao final:"))
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+(v*t)
if(s0<=1000):
	print("sim")
else:
	print("nao")
	
-- EXECUTION TIME:
0.171757
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2972/main.py", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:49:36) 
-- CODE:
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+(v*t)
if(s0<=1000):
	print("sim")
else:
	print("nao")
	
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:49:56) 
-- CODE:
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+(v*t)
if(s0<=1000):
	print("sim")
else:
	print("nao")
	
-- EXECUTION TIME:
0.123731
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
Sim
---- user output:
sim
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
Sim
---- user output:
sim
-- TEST CASE 3:
---- input:
5
50
15
---- correct output:
755
Nao
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:50:13) 
-- CODE:
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+v*t
if(s0<=1000):
	print("sim")
else:
	print("nao")
	
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:50:22) 
-- CODE:
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+v*t
if(s0<=1000):
	print("sim")
else:
	print("nao")
	
-- EXECUTION TIME:
0.227676
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
Sim
---- user output:
sim
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
Sim
---- user output:
sim
-- TEST CASE 3:
---- input:
5
50
15
---- correct output:
755
Nao
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:51:06) 
-- CODE:
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+v*t
print(s)
if(s0<=1000):
	print("sim")
else:
	print("nao")
	
-- OUTPUT:
3002
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:51:14) 
-- CODE:
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+v*t
print(s)
if(s0<=1000):
	print("sim")
else:
	print("nao")
	
-- EXECUTION TIME:
0.212481
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
Sim
---- user output:
3002
sim
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
Sim
---- user output:
4252
sim
-- TEST CASE 3:
---- input:
5
50
15
---- correct output:
755
Nao
---- user output:
755
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:51:23) 
-- CODE:
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+(v*t)
print(s)
if(s0<=1000):
	print("sim")
else:
	print("nao")
	
-- OUTPUT:
3002
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:51:31) 
-- CODE:
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+(v*t)
print(s)
if(s0<=1000):
	print("sim")
else:
	print("nao")
	
-- EXECUTION TIME:
0.223746
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
Sim
---- user output:
3002
sim
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
Sim
---- user output:
4252
sim
-- TEST CASE 3:
---- input:
5
50
15
---- correct output:
755
Nao
---- user output:
755
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:52:46) 
-- CODE:
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+(v*t)
print(s)
if(s<=1000):
	print("sim")
else:
	print("nao")
	
-- OUTPUT:
3002
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:52:56) 
-- CODE:
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+(v*t)
print(s)
if(s<=1000):
	print("sim")
else:
	print("nao")
	
-- EXECUTION TIME:
0.145168
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
Sim
---- user output:
3002
nao
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
Sim
---- user output:
4252
nao
-- TEST CASE 3:
---- input:
5
50
15
---- correct output:
755
Nao
---- user output:
755
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:53:09) 
-- CODE:
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+(v*t)
print(s)
if(s<=1000):
	print("sim")
else:
	print("nao")
	
-- OUTPUT:
3002
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:53:20) 
-- CODE:
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+(v*t)
print(s)
if(s>=1000):
	print("sim")
else:
	print("nao")
	
-- OUTPUT:
3002
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:53:27) 
-- CODE:
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+(v*t)
print(s)
if(s>=1000):
	print("sim")
else:
	print("nao")
	
-- EXECUTION TIME:
0.192286
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
Sim
---- user output:
3002
sim
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
Sim
---- user output:
4252
sim
-- TEST CASE 3:
---- input:
5
50
15
---- correct output:
755
Nao
---- user output:
755
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:53:57) 
-- CODE:
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+(v*t)
print(s)
if(s>=t,1000):
	print("sim")
else:
	print("nao")
	
-- OUTPUT:
3002
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:54:04) 
-- CODE:
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+(v*t)
print(s)
if(s>=t,1000):
	print("sim")
else:
	print("nao")
	
-- EXECUTION TIME:
0.181615
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
Sim
---- user output:
3002
sim
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
Sim
---- user output:
4252
sim
-- TEST CASE 3:
---- input:
5
50
15
---- correct output:
755
Nao
---- user output:
755
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:54:19) 
-- CODE:
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+(v*t)
print(s)
if(s>=t)1000:
	print("sim")
else:
	print("nao")
	
-- ERROR:
File "XXXX", line 6
    if(s>=t)1000:
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:54:42) 
-- CODE:
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+(v*t)
print(s)
if(s<=t):
	print("sim")
else:
	print("nao")
	
-- OUTPUT:
3002
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:54:49) 
-- CODE:
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+(v*t)
print(s)
if(s<=t):
	print("sim")
else:
	print("nao")
	
-- EXECUTION TIME:
0.157809
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
Sim
---- user output:
3002
nao
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
Sim
---- user output:
4252
nao
-- TEST CASE 3:
---- input:
5
50
15
---- correct output:
755
Nao
---- user output:
755
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 22:51:28) 
-- CODE:
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+(v*t)
print(s)
if(s<=t):
	print("sim")
else:
	print("nao")
	
-- OUTPUT:
3002
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:46:32) 
-- CODE:
s0=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:" ))
t=int(input("tempo de deslocamento:"))
s=s0+(v*t)
print(s)
if(s<=t):
	print("sim")
else:
	print("nao")
	
-- OUTPUT:
3002
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
